--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,11 @@
 :launchURL: https://developers.redhat.com/launch
 :repoName: fuse-istio-distributed-tracing-booster
 
-= Istio distributed tracing - Fuse Booster
+= Istio Distributed Tracing - Fuse Booster
 
 == Overview
 
-The Fuse Istio distributed tracing booster demonstrates Istio’s Distributed Tracing via a (minimally) instrumented set of Apache Camel/Spring Boot applications:
+The Fuse Istio Distributed Tracing booster demonstrates Istio’s Distributed Tracing via a (minimally) instrumented set of Apache Camel/Spring Boot applications:
 
 * A _name service_ that returns a name to greet.
 * A _greeting service_ that invokes the name service to get a name and then returns the `Hello, NAME` string.
@@ -88,7 +88,7 @@ $ oc create -f istio/greetings-gateway.yml
 
 .. Run the following command to retrieve the appropriate URL to access the booster application: 
 +
-*Note:* Make sure you that you specify the URL with the HTTP scheme. HTTPS is *not* enabled by default.)
+*Note:* Make sure you that you specify the URL with the HTTP scheme. HTTPS is *not* enabled by default.
 +
 [source,bash,options="nowrap",subs="attributes+"]
 ----
@@ -101,7 +101,7 @@ The command returns the istio-system istio-ingress URL, appended with the RouteR
 
 .. Access the Jaeger tracing dashboard.
 +
-After a few seconds, when all the spans have been collected and presented in a trace, the traces from the invocation of the two endpoints should look similar to the following: 
+After a few seconds, after all the spans have been collected, the traces from the invocation of the two endpoints should look similar to the following example: 
 +
 image::doc/trace.png[]
 
