--- a/README.adoc
+++ b/README.adoc
@@ -71,7 +71,7 @@ $ cd my_openshift/fuse-istio-distributed-tracing-booster
 +
 [source,bash,options="nowrap",subs="attributes+"]
 ----
-$ mvn clean -DskipTests fabric8:deploy -Popenshift
+$ mvn clean -DskipTests oc:deploy -Popenshift
 ----
 
 . If your environment does not support automatic sidecar injection, you must manually inject the Istio sidecar envoy proxy:
@@ -150,7 +150,7 @@ $ cd my_openshift/fuse-istio-distributed-tracing-booster
 +
 [source,bash,options="nowrap",subs="attributes+"]
 ----
-$ mvn clean -DskipTests fabric8:deploy -Popenshift -Dfabric8.generator.fromMode=istag -Dfabric8.generator.from=MY_PROJECT_NAME/{image-name-version}
+$ mvn clean -DskipTests oc:deploy -Popenshift -Djkube.generator.fromMode=istag -Djkube.generator.from=MY_PROJECT_NAME/{image-name-version}
 ----
 
 . If your environment dose not support automatic sidecar injection, you need to manually inject istio sidecar envoy proxy:
