--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,8 @@
 :launchURL: https://developers.redhat.com/launch
 :repoName: fuse-istio-distributed-tracing-booster
-:image-registry: registry.access.redhat.com
+:image-registry: registry.redhat.io
 :image-prefix: /fuse7/
-:image-name-version: fuse-java-openshift-rhel8:1.11
+:image-name-version: fuse-java-openshift-rhel8:1.13
 
 = Istio Distributed Tracing - Fuse Booster
 
